cabal-version: 1.12
name: token-limiter-concurrent
version: 0.2.0.1
synopsis: A thread-safe concurrent token-bucket rate limiter that guarantees fairness
homepage: https://github.com/NorfairKing/token-limiter-concurrent#readme
bug-reports: https://github.com/NorfairKing/token-limiter-concurrent/issues
author: Tom Sydney Kerckhove
maintainer: syd@cs-syd.eu
copyright: Copyright (c) 2022-2024 Tom Sydney Kerckhove
license: MIT
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  LICENSE

source-repository head
  type: git
  location: https://github.com/NorfairKing/token-limiter-concurrent

library
  -- cabal-gild: discover src
  exposed-modules: Control.Concurrent.TokenLimiter.Concurrent
  hs-source-dirs:
    src

  build-depends:
    base >=4.7 && <5

  default-language: Haskell2010

test-suite token-limiter-concurrent-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  -- cabal-gild: discover test --exclude=test/Spec.hs
  other-modules:
    Control.Concurrent.TokenLimiter.ConcurrentSpec

  hs-source-dirs:
    test

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-tool-depends:
    sydtest-discover:sydtest-discover

  build-depends:
    QuickCheck,
    async,
    base >=4.7 && <5,
    genvalidity,
    genvalidity-sydtest,
    stm,
    sydtest,
    token-limiter-concurrent

  default-language: Haskell2010
